--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -2,18 +2,16 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
+    font-family: 'Open Sans', sans-serif; 
 
 body {
-    background: #00b6c4;
+    background: #ecf0f1; 
 }
 
 .container{
-    background: #f5f5f5;
+    background: #fff; 
     max-width: 800px;
     margin: 60px auto;
-    height: 1250px;
     padding: 20px;
     box-shadow: 0 2px 20px rgba(0,0, 0, 0.3);
 }
@@ -24,12 +22,15 @@ body {
 
 .header h1{
     margin-bottom: 10px;
+    color: #2c3e50; 
+    font-weight: 600;
 }
 
 .header h3{
     text-transform: uppercase;
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 600; 
+    color: #f39c12; 
 }
 
 .img-area{
@@ -38,7 +39,7 @@ body {
     border-radius: 50%;
     overflow: hidden;
     margin: 25px auto;
-    border: 15px groove deepskyblue;
+    border: 15px groove #3498db; 
 }
 
 .img-area img{
@@ -57,19 +58,22 @@ body {
 
 .left p{
     line-height: 2;
+    color: #2c3e50; 
 }
 
 .left ul li{
     line-height: 2;
+    color: #2c3e50; 
 }
 
 h2{
-    background: #00b6c4;
+    background: #3498db; 
     padding: 15px;
-    color: #fff;
+    color: #fff; 
     margin: 30px 0;
     font-size: 20px;
     border-radius: 0  50px 50px 0;
+    font-weight: 600; 
 }
 
 .right {
@@ -79,14 +83,17 @@ h2{
 
 .right h3{
     margin-bottom: 15px;
+    color: #2c3e50; 
 }
 
 .right p{
     line-height: 2.9;
+    color: #2c3e50; 
 }
 
 .right ul li{
     line-height: 2;
+    color: #2c3e50; 
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
